CASMCMS-8625: Add ara links to component and session records
